--- a/2주차 과제/박지민/style.css
+++ b/2주차 과제/박지민/style.css
@@ -137,7 +137,7 @@ body > .info{
 
 .info .actions button i{
 	margin:0 auto;
-	margin-bottom: clac(var(--padding)/2);
+	margin-bottom: calc(var(--padding)/2);
 	font-size: 16px;
 }
 
@@ -180,7 +180,7 @@ body > .info{
 .info .channel .subscribe{
 	text-transform:uppercase;
 	color:var(--red-color);
-	font-size:var(--font-micro):
+	font-size:var(--font-micro);
 }
 
 .upNext{
@@ -212,7 +212,7 @@ body > .info{
 }
 
 .upNext .item .moreButton{
-	height:100%
+	height:100%;
 	flex: 1 1 5%;
 }
 
